fixing spacing

--- a/css/home.css
+++ b/css/home.css
@@ -10,7 +10,7 @@ html, body {
 header {
     color: rgb(26, 81, 56);
     text-align: center;
-    padding-top: 6rem;
+    padding-top: 5rem;
     padding-bottom: 1rem;
     background-image: url('../photos/background-photo.jpg');
     background-size: cover;
